- Fixed attack speed calculation. - Added active and passive skill icons to the hero detail page. - Moved cache message into the body on hero page. - Added padding between stat details on hero detail page. - Refactored Calculator for better understanding and to be a bit more readable. - Style changes to hero page. - Fixed MySQL charset in the DSN settings file.

--- a/css/hero.css
+++ b/css/hero.css
@@ -1,5 +1,13 @@
+body {
+	color: rgb(169, 152, 119);
+}
 .hero-page .inline-block {
 	vertical-align: top
+}
+
+.section.one {
+	margin-left: 10px;
+	width: 300px
 }
 
 .hero {
@@ -15,7 +23,7 @@
 .hero .item-slot {
 	border: 1px solid rgb(0, 0, 0);
 	border-radius: 5px;
-	background-color: transparent;
+	background-color: rgba(0, 0, 0, 0.3);
 	box-shadow: none;
 	position: absolute;
 	text-align: center
@@ -23,19 +31,20 @@
 
 .hero .item-slot.bracers {
 	left: 16em;
-	top: 10em
+	top: 11em
 }
 .hero .item-slot.feet {
 	left: 8.65em;
 	top: 30em
 }
 .hero .item-slot.hands {
-	left: 0;
+	left: 1em;
 	top: 11em
 }
 .hero .item-slot.head {
 	left: 8.6em;
-	top: -2em
+	top: -2em;
+	z-index: 1;
 }
 .hero .item-slot.leftFinger {
 	left: 17em;
@@ -51,14 +60,14 @@
 }
 .hero .item-slot.neck {
 	left: 15em;
-	top: 4em
+	top: 5em
 }
 .hero .item-slot.offHand {
 	left: 17em;
 	top: 26em
 }
 .hero .item-slot.rightFinger {
-	left: -1em;
+	left: 0;
 	top: 20em
 }
 .hero .item-slot.shoulders {
@@ -81,4 +90,21 @@
 	border: none;
 	height: 18em;
 	width: 64em
+}
+
+.list {
+	background-color: rgb(18, 17, 15);
+	background-image: url('http://us.battle.net/d3/static/images/layout/content-bg.jpg');
+	border-radius: 0.5em;
+	box-shadow: 0 0 6px rgb(0, 0, 0);
+	margin-top: 0;
+	text-shadow: 1px 1px 0 rgb(0, 0, 0)
+}
+.list .stat {
+	padding-bottom: 1em;
+}
+.list .stat .nuetral {
+	color: rgb(220, 220, 0);
+	font-size: 1.2em;
+	font-weight: bold
 }
